= ActiveMerchant CHANGELOG

* Balanced: Add support for appears_on_statement_as [duff]
* Authorize.Net: Make already actioned responses failures [odorcicd]
* Add Payex gateway [atomgiant]
* Paymill: Fix authorizations [duff]

== Version 1.42.2 (November 13th, 2013)

* Renew public certificate

== Version 1.42.1 (November 13th, 2013)

* Signed version of 1.42.0

== Version 1.42.0 (November 13th, 2013)

* Fix NoMethodError "tr" for params with dash [TimothyKlim]
* Authorize.Net: Add cardholder authentication options (CAVV) support [structure]
* CardStreamModern: Added better checks on inputs from the gateway [ExxKA]
* Stripe: Send :ip to the gateway instead of :browser_ip [f3ndot]
* Wirecard Page: new offsite gateway [mbretter]
* Mercury: Add support for requesting a token [kcdragon]
* Add App55 gateway [ianbutler55]
* UsaEpayTransaction: Support for split payments [GBH]
* Add Swipe Checkout gateway [matt-optimizerhq]
* Spreedly Core: Allow overriding the gateway token when running a transaction [hoenth]
* Spreedly Core: Add order_id [hoenth]
* Spreedly Core: Allow store without retain [hoenth]
* Stripe: Support multiple cards on account [pierre]
* Stripe: Add card_id parameter to unstore call [pierre]
* Remove usage of `uname -a` [ntalbott]
* Litle: Allow easier access to the response code [duff]
* Stripe: Add the option to pass a version header [odorcicd]
* Elavon: Update supported countries [duff]
* Add Raven PacNet gateway [llopez]
* BitPay: Fix BitPay issues and implement Notification#acknowledge [odorcicd]

== Version 1.41.0 (October 24th, 2013)

* Stripe: Payments won't fail when specifying a customer with a creditcard number [melari]
* Add Conekta gateway [leofischer]
* Wirecard: Add support for void and refund [duff]
* Orbital: Mandatory field fix [juicedM3, jduff]

== Version 1.40.0 (October 18th, 2013)

* Paymill: Revert Add support for specifying the :customer [melari]
* Quickpay: Make v7 of the API default [kvs]
* Bitpay: Add return [tahnok]
