@@ -4,6 +4,7 @@
 * Authorize.Net: Make already actioned responses failures [odorcicd]
 * Add Payex gateway [atomgiant]
 * Paymill: Fix authorizations [duff]
+* Braintree Blue: Allow specifying the credit card token [ntalbott]
 
 == Version 1.42.2 (November 13th, 2013)
 
